k8s/apps/dashboard/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.k8s.vicio.ovh`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
          scheme: https
          serversTransport: dashboard-transport
      middlewares:
        - name: authentik-forwardauth
        - name: dashboard-insecure
  tls:
    secretName: dashboard-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-insecure
  namespace: kubernetes-dashboard
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-cert
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: dashboard.k8s.vicio.ovh
  tls:
    - hosts:
        - dashboard.k8s.vicio.ovh
      secretName: dashboard-tls
